--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,9 +11,20 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://www.youtube.com/*"],
-      "css": ["yt.css"],
-      "js": ["content.js"]
+      "matches": ["https://www.youtube.com/"],
+      "js": ["content.js", "home.js", "sidebar.js"],
+      "css":["yt.css"]
+
+    },
+    {
+      "matches": ["https://www.youtube.com/results*"],
+      "js": ["content.js", "search.js", "sidebar.js"],
+      "css":["yt.css"]
+    },
+    {
+      "matches": ["https://www.youtube.com/watch*"],
+      "js": ["content.js", "watch.js"],
+      "css":["yt.css"]
     }
   ],
   "permissions": [
