--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@types/chrome": "^0.0.270",
     "typescript": "^5.5.3",
     "vite": "^5.4.1"
+  },
+  "dependencies": {
+    "path": "^0.12.7",
+    "url": "^0.11.4"
   }
 }
