--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,13 @@
 {
   "manifest_version": 3,
-  "name": "My Chrome Extension",
+  "name": "proyt",
   "version": "1.0",
   "background": {
     "service_worker": "background.js"
   },
   "content_scripts": [
     {
-      "matches": ["https://www.youtube.com/*"],
+      "matches": ["https://www.youtube.com/"],
       "js": ["home.js", "sidebar.js"],
       "css": ["yt.css"]
     },
